--- a/src/components/Common/Container/container.module.css
+++ b/src/components/Common/Container/container.module.css
@@ -1,4 +1,16 @@
 .container {
-  width: 1260px;
+  width: 65%;
   margin: auto;
+}
+
+@media only screen and (max-width: 1500px) {
+  .container {
+    width: 85%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 95%;
+  }
 }
