--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -42,3 +42,10 @@
   margin-left: 0.8rem;
   font-size: 1.4rem;
 }
+
+@media only screen and (max-width: 1500px) {
+  .userCard {
+    width: 90%;
+    margin: 1rem auto;
+  }
+}
