--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -43,6 +43,14 @@
   font-size: 1.4rem;
 }
 
+.footerWrapper {
+  background: #f5f5f5;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 3rem;
+  align-items: center;
+}
+
 @media only screen and (max-width: 1500px) {
   .userCard {
     width: 90%;
