--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -51,9 +51,134 @@
   align-items: center;
 }
 
+.verticalDivider {
+  font-size: 1.2rem;
+  color: #b0b0b0;
+}
+
+/* EDIT FORM STYLES */
+
+.formHeadingContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background-color: #fefefe;
+  border-bottom: 2px solid #f2f2f2;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputContainer {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  justify-content: flex-end;
+}
+
+.label {
+  font-size: 1.4rem;
+  text-align: right;
+  margin-right: 2rem;
+}
+
+.asterisk {
+  color: red;
+}
+
+.input {
+  width: 80%;
+  height: 3rem;
+  outline: grey;
+  border: 1px solid #c2c2c2;
+  border-radius: 3px;
+}
+
+.formFooter {
+  border-top: 2px solid #f2f2f2;
+  padding-top: 2rem;
+  margin-top: 5rem;
+}
+
+.btnContainer {
+  width: 85%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btnCancel {
+  background: #ffffff;
+  font-size: 1.6rem;
+  border: 0.5px solid #c2c2c2;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+  padding: 0.5rem 1.5rem;
+  color: #646464;
+  font-weight: 600;
+  box-shadow: 1px 1px 3px #e8e8e8;
+}
+
+.btnOk {
+  background: #439bff;
+  font-size: 1.6rem;
+  border: 0.5px solid #c2c2c2;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1.5rem;
+  color: #ffffff;
+  font-weight: 600;
+  box-shadow: 1px 1px 3px #e8e8e8;
+}
+
+/*MODAL STYLES*/
+.modal {
+  background-color: #ffffff;
+  width: 700px;
+  height: 440px;
+  margin: auto;
+  padding: 0;
+  border: none;
+  border-radius: 10px;
+  top: 20vh;
+  position: relative;
+  outline: none;
+}
+
 @media only screen and (max-width: 1500px) {
   .userCard {
     width: 90%;
     margin: 1rem auto;
+  }
+
+  .formWrapper {
+    padding-left: 2rem;
+  }
+
+  .inputContainer {
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 1rem;
+  }
+
+  .input {
+    width: 90%;
+  }
+
+  .btnContainer {
+    width: 93%;
+  }
+
+  .modal {
+    width: 95%;
+    height: 54rem;
+    top: 6rem;
   }
 }
