--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -123,6 +123,7 @@
   color: #646464;
   font-weight: 600;
   box-shadow: 1px 1px 3px #e8e8e8;
+  cursor: pointer;
 }
 
 .btnOk {
@@ -134,6 +135,7 @@
   color: #ffffff;
   font-weight: 600;
   box-shadow: 1px 1px 3px #e8e8e8;
+  cursor: pointer;
 }
 
 /*MODAL STYLES*/
