--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -152,6 +152,13 @@
   outline: none;
 }
 
+/*LOADER STYLES*/
+.loaderContainer {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+}
+
 @media only screen and (max-width: 1500px) {
   .userCard {
     width: 90%;
@@ -182,5 +189,8 @@
     width: 95%;
     height: 54rem;
     top: 6rem;
+  }
+  .loaderContainer {
+    left: 47%;
   }
 }
